# tree2md

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  boundary_test.go  build.sh  go.mod  main.go  main_gitignore_test.go  main_test.go  mise.toml  tasks.toml
.claude/commands/: pre-release-checklist.md  release.md
.github/workflows/: ci.yml  publish-crate.yml  release.yml
sample/: no_newline.txt
sample/foo/: bar.go  bar.py
scripts/: release.sh  test-release.sh  update-readme-embeds.sh
src/: cli.rs  errors.rs  language.rs  main.rs  stdin.rs  utils.rs
src/content/: io.rs  mod.rs  read.rs  truncate.rs
src/filter/: ext.rs  mod.rs  patterns.rs
src/fs_tree/: build.rs  build_v2.rs  loc.rs  mod.rs  node.rs  print.rs  progress.rs
src/injection/: mod.rs  readme.rs
src/input/: mod.rs  stdin.rs
src/language/: detect.rs  mod.rs  syntax.rs
src/matcher/: engine.rs  mod.rs  rel_path.rs  spec.rs
src/output/: html_tree.rs  links.rs  mod.rs  stats.rs
src/profile/: emoji.rs  file_type.rs  mod.rs
src/render/: html.rs  markdown.rs  mod.rs  pipe.rs  pipeline.rs  renderer.rs  (+1 more)
tests/: emoji_test.rs  exclude_pattern_test.rs  filtering_test.rs  fixtures.rs  gitignore_test.rs  html_output_test.rs  include_directory_test.rs  include_exclude_priority_test.rs  include_gitignore_test.rs  include_pattern_test.rs  integration_test.rs  level_edge_case_test.rs  links_test.rs  max_chars_test.rs  nested_git_repo_test.rs  output_format_test.rs  pipe_output_test.rs  preset_test.rs  safety_test.rs  spec_compliance_test.rs  stats_test.rs
(+21 files in other folders)
