[package]
name = "tree2md"
version = "0.1.6"
edition = "2021"
authors = ["zawakin"]
description = "A CLI tool that scans directories and outputs their structure in Markdown format"
license = "MIT"
repository = "https://github.com/zawakin/tree2md"
homepage = "https://github.com/zawakin/tree2md"
readme = "README.md"
keywords = ["markdown", "tree", "directory", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
