[package]
name = "tree2md"
version = "0.8.2"
edition = "2021"
authors = ["zawakin"]
description = "Like the tree command, but outputs in Markdown. Optimized for AI agents."
license = "MIT"
repository = "https://github.com/zawakin/tree2md"
homepage = "https://github.com/zawakin/tree2md"
readme = "README.md"
keywords = ["markdown", "tree", "directory", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
glob = "0.3"
globset = "0.4"
ignore = "0.4"
once_cell = "1.19"
pathdiff = "0.2"
atty = "0.2"
unicode-width = "0.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2"
predicates = "3"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
